[package]
name = "lumberjack"
version = "0.1.0"
authors = ["asteroidb612 <dlazzeri1@gmail.com>"]

[dependencies]
job_scheduler = "*"
hyper = "0.10.3"
hyper-rustls = "0.6.1"
yup-oauth2 = "*"
google-calendar3 = "1.0.7+20171205"
chrono = {version = "0.4.4", features = ["serde"] }
itertools = "0.7.8"
rouille = "2.2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.2"
